# ztf-lfi-demo

./: README.md  apptainer.def  conda-lock.yml  demo.ipynb  environment.yaml  pyproject.toml  run.sh
