[tool.poetry]
name = "ztf-lfi-demo"
version = "0.1.0"
description = "Demo of using LFI for GW data"
authors = ["Ethan Marx <emarx@mit.edu>"]
license = "MIT"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
