[tool.poetry]
name = "ztf-lfi-demo"
version = "0.1.0"
description = "Demo of using LFI for GW data"
authors = ["Ethan Marx <emarx@mit.edu>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
conda-lock = "^2.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
